--- a/contents/docs/classes/circle/index.mdx
+++ b/contents/docs/classes/circle/index.mdx
@@ -6,6 +6,8 @@ description: Represents a circle shape with position and radius.
 ## Constructor
 <div className="api-card">
 
+- <ApiSig name="Circle" returns="Circle" />
+- <ApiSig name="Circle" params={[{ name: "radius", type: "SupportsFloat" }]} returns="Circle" />
 - <ApiSig name="Circle" params={[{ name: "pos", type: "Vec2" }, { name: "radius", type: "SupportsFloat" }]} returns="Circle" />
 - <ApiSig name="Circle" multiline params={[{ name: "x", type: "SupportsFloat" }, { name: "y", type: "SupportsFloat" }, { name: "radius", type: "SupportsFloat" }]} returns="Circle" />
 
