--- a/contents/docs/classes/text/index.mdx
+++ b/contents/docs/classes/text/index.mdx
@@ -6,7 +6,7 @@ description: A text object for rendering text to the active renderer.
 ## Constructor
 <div className="api-card">
 
-- <ApiSig name="Text" params={[{ name: "font", type: "Font" }]} returns="Text" />
+- <ApiSig name="Text" params={[{ name: "font", type: "Font" }, { name: "text", type: "str", default: "''" }]} returns="Text" />
 
 A text object for rendering text to the active renderer.
 </div>
