--- a/contents/docs/classes/tile-layer/index.mdx
+++ b/contents/docs/classes/tile-layer/index.mdx
@@ -12,7 +12,7 @@ Inherits from [Layer](/docs/classes/layer).
 | Name | Description | Type |
 | --- | --- | --- |
 | `opacity` | Layer opacity from 0.0 to 1.0. | <code>float</code> |
-| `tiles` | TileLayerTileList of tiles in the layer grid. | <code>list[<a href="/docs/classes/tile-layer">TileLayer</a>.Tile]</code> |
+| `tiles` | TileLayerTileList of tiles in the layer grid. | <code>list[<a href="/docs/classes/tile-layer.-tile">TileLayer.Tile</a>]</code> |
 
 ## Methods
 ---
