--- a/contents/docs/classes/tile-set/index.mdx
+++ b/contents/docs/classes/tile-set/index.mdx
@@ -15,12 +15,12 @@ description: TileSet represents a collection of tiles and associated metadata. A
 | `margin` | Pixel margin around the source image. | <code>int</code> |
 | `name` | Tileset name. | <code>str</code> |
 | `spacing` | Pixel spacing between tiles in the source image. | <code>int</code> |
-| `terrains` | TerrainList of terrain definitions. | <code>list[<a href="/docs/classes/tile-set">TileSet</a>.Terrain]</code> |
+| `terrains` | TerrainList of terrain definitions. | <code>list[<a href="/docs/classes/tile-set.-terrain">TileSet.Terrain</a>]</code> |
 | `texture` | Source texture for the tileset. | <code><a href="/docs/classes/texture">Texture</a></code> |
 | `tile_count` | Total number of tiles in the tileset. | <code>int</code> |
 | `tile_offset` | Per-tile offset applied when rendering. | <code><a href="/docs/classes/vec2">Vec2</a></code> |
 | `tile_size` | Size of tiles in pixels. | <code><a href="/docs/classes/vec2">Vec2</a></code> |
-| `tiles` | TileSetTileList of tile metadata entries. | <code>list[<a href="/docs/classes/tile-set">TileSet</a>.Tile]</code> |
+| `tiles` | TileSetTileList of tile metadata entries. | <code>list[<a href="/docs/classes/tile-set.-tile">TileSet.Tile</a>]</code> |
 
 ## Methods
 ---
