--- a/contents/docs/functions/index.mdx
+++ b/contents/docs/functions/index.mdx
@@ -66,10 +66,20 @@ Math related functions
 
 [View Math Functions →](/docs/functions/math)
 
+### Mixer
+Sound and music playback functions
+
+[View Mixer Functions →](/docs/functions/mixer)
+
 ### Mouse
 Mouse related functions
 
 [View Mouse Functions →](/docs/functions/mouse)
+
+### Physics
+Physics engine related classes and functions
+
+[View Physics Functions →](/docs/functions/physics)
 
 ### Pixel Array
 Functions for manipulating PixelArray objects
