--- a/contents/docs/manual/changelog/index.mdx
+++ b/contents/docs/manual/changelog/index.mdx
@@ -9,7 +9,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ---
 
-## [1.6.1] - No Release Date
+## [1.6.1] - 2026-02-15
 
 <a id="added161"></a>
 ### Added
@@ -21,8 +21,34 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - `draw.ellipses` and `draw.lines` functions for drawing multiple ellipses or lines in a single call.
 - Added `is_convex` and `is_concave` methods to the `Polygon` class for checking polygon convexity.
 - Added `Circle` default constructor and another accepting just a radius.
-- New `physics` submodule with `World` and `Body` classes for basic 2D physics simulation.
-- `BodyType` enum for specifying physics body types (STATIC, DYNAMIC, KINEMATIC).
+- New `physics` submodule with a `World` class, bodies, and joints for basic 2D physics simulation.
+    - `Body` abstract class for physics bodies:
+        - `RigidBody` for simulating solid objects with mass, velocity, and forces.
+        - `CharacterBody` for simulating character-like movement with floor detection and snapping.
+        - `StaticBody` for immovable objects that can still collide with other bodies.
+    - `Joint` abstract class for the following joint types:
+        - `DistanceJoint` for maintaining a fixed distance between two bodies.
+        - `FilterJoint` for filtering collisions between two bodies.
+        - `MotorJoint` for applying a motor force to maintain a relative position between two bodies.
+        - `PrismaticJoint` for allowing relative movement along a specified axis between two bodies.
+        - `RevoluteJoint` for allowing relative rotation between two bodies.
+        - `MouseJoint` for dragging a body with the mouse cursor.
+        - `WeldJoint` for rigidly connecting two bodies together.
+        - `WheelJoint` for allowing relative rotation and translation along a specified axis between two bodies.
+- `Collision` class for representing collision information between two bodies. Provided via `World.get_collisions()` method.
+- `CastHit` class for representing the result of a ray or shape cast in the physics world.
+- Added `Capsule` shape class for physics bodies, defined by a line segment and a radius.
+- Added `draw.capsule` and `draw.capsules` functions for drawing capsules.
+- `get/set_fixed_delta` and `get/set_max_substeps` functions for managing physics stepping parameters.
+- `add_fixed_update` and `clear_fixed_updates` functions and `fixed_callback` decorator for registering functions to be called at a fixed interval during the automatic physics update loop.
+- Add `Map.tile_layers`, `Map.object_groups`, and `Map.image_layers` properties for easier access to specific layer types.
+- Add `Map.get_layer(name)` method for retrieving a layer by name.
+- Add `World.from_map_layer(world, layer)` method for creating physics bodies from a tilemap layer.
+- `Vec2` can be divided by another `Vec2` element-wise using the `/` operator.
+- New `draw.bezier` and `draw.sector` functions for drawing Bezier curves and circular sectors.
+- Added `draw.polyline` for drawing connected line segments.
+- `world_to_screen` and `screen_to_world` functions/methods for converting between world and screen coordinates.
+- `camera.get_active_pos` function for getting the position of the currently active camera.
 
 <a id="changed161"></a>
 ### Changed
@@ -33,17 +59,22 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - `Stream.looping` is now an RW property instead of just a setter method.
 - `Stream` playback position renamed from `current_time` to `playback_pos`.
 - Circle drawing (and now ellipses) default segment count reduced from 36 to 24.
-- Line drawing thickess can now be a float.
+- Line drawing thickness can now be a float.
+- Rename `Map.layers` to `Map.all_layers`
+- `Texture` constructor involving a `Vec2` size parameter changed to accept separate `width` and `height` integer parameters for type safety.
+- `AnimationController.add_sheet` method `Vec2` frame size parameter changed to separate `frame_width` and `frame_height` integer parameters for type safety.
+- `draw.rect` and `draw.rects` functions now have parameters for corner radii.
 
 <a id="fixed161"></a>
 ### Fixed
-- Fixed a bug where textures wouldn't render at all (hopefully).
+- Fixed a bug where textures wouldn't render at all (hopefully). Likely related to the internal SDL2->SDL3 transition.
 
 <a id="removed161"></a>
 ### Removed
 - Removed `rewind` method from audio stream class (use `seek(0)` or restart playback).
 - Removed `miniaudio` dependency.
 - Removed `SGL_gfx` dependency.
+- Due to the new CharacterBody class, I've decided to remove the `Sprite` class as it become redundant.
 
 
 ---
