--- a/contents/docs/manual/index.mdx
+++ b/contents/docs/manual/index.mdx
@@ -17,11 +17,29 @@ Reference for all constants and enums available in Kraken Engine.
 
 [View Constants →](/docs/manual/constants)
 
+## Formats and Codecs
+
+Detailed breakdown of supported image formats and audio codecs.
+
+[Formats and Codecs →](/docs/manual/formats-and-codecs)
+
 ## Event Attributes
 
 Learn about the event system and available event attributes for handling game events.
 
 [Event Attributes →](/docs/manual/event-attributes)
+
+## Framework Comparison
+
+See how PyKraken compares to other game development frameworks.
+
+[Comparison →](/docs/manual/comparison)
+
+## Changelog
+
+Keep track of the latest updates and improvements to the engine.
+
+[Changelog →](/docs/manual/changelog)
 
 ---
 
