--- a/contents/docs/classes/audio/index.mdx
+++ b/contents/docs/classes/audio/index.mdx
@@ -1,57 +1,40 @@
 ---
 title: Audio
-description: A decoded audio object that supports multiple simultaneous playbacks.
+description: Abstract base class for all audio resources. Access via the 'mixer' submodule.
 ---
 
-## Constructor
-<div className="api-card">
-
-- <ApiSig name="Audio" multiline params={[{ name: "file_path", type: "str" }, { name: "volume", type: "SupportsFloat", default: "1.0" }]} returns="Audio" />
-
-A decoded audio object that supports multiple simultaneous playbacks.
-</div>
 
 ## Properties
 <hr style={{marginBottom: 0}} />
 
 | Name | Description | Type |
 | --- | --- | --- |
-| `volume` | The volume level for new and existing playbacks. | <code>float</code> |
+| `playing` | True if currently playing. | <code>bool</code> |
+| `volume` | Volume scalar (0.0 to 1.0). | <code>float</code> |
 
 ## Methods
 ---
 
 ### Play
 <div className="api-card">
-<ApiSig name="play" multiline params={[{ name: "fade_in_ms", type: "SupportsInt", default: "0" }, { name: "loop", type: "bool", default: "False" }]} returns="None" />
+<ApiSig name="play" params={[{ name: "fade_in", type: "SupportsFloat", default: "0.0" }]} returns="None" />
 
-Play the audio with optional fade-in time and loop setting.
-
-Creates a new voice for playback, allowing multiple simultaneous plays of the same audio.
-Each play instance is independent and can have different fade and loop settings.
+Start audio playback.
 
 _**Args**_
 
-- `fade_in_ms` : Fade-in duration in milliseconds. Defaults to 0.
-- `loop` : Whether to loop the audio continuously. Defaults to False.
-
-_**Raises**_
-
-- `RuntimeError` : If audio playback initialization fails.
+- `fade_in` : Fade in duration in seconds. Defaults to 0.0.
 
 </div>
 
 ### Stop
 <div className="api-card">
-<ApiSig name="stop" params={[{ name: "fade_out_ms", type: "SupportsInt", default: "0" }]} returns="None" />
+<ApiSig name="stop" params={[{ name: "fade_out", type: "SupportsFloat", default: "0.0" }]} returns="None" />
 
-Stop all active playbacks of this audio.
-
-Stops all currently playing voices associated with this Audio object. If a fade-out
-time is specified, all voices will fade out over that duration before stopping.
+Stop all playing instances of this audio.
 
 _**Args**_
 
-- `fade_out_ms` : Fade-out duration in milliseconds. Defaults to 0.
+- `fade_out` : Fade out duration in seconds. Defaults to 0.0.
 
 </div>
