--- a/contents/docs/classes/object-group/index.mdx
+++ b/contents/docs/classes/object-group/index.mdx
@@ -12,7 +12,7 @@ Inherits from [Layer](/docs/classes/layer).
 | Name | Description | Type |
 | --- | --- | --- |
 | `color` | Tint color for non-tile objects. | <code><a href="/docs/classes/color">Color</a></code> |
-| `draw_order` | Drawing order for objects in the group. | <code><a href="/docs/classes/object-group">ObjectGroup</a>.DrawOrder</code> |
+| `draw_order` | Drawing order for objects in the group. | <code><a href="/docs/manual/constants#objectgroupdraworder">ObjectGroup.DrawOrder</a></code> |
 | `objects` | MapObjectList of objects in the group. | <code>list[<a href="/docs/classes/map-object">MapObject</a>]</code> |
 | `opacity` | Layer opacity from 0.0 to 1.0. | <code>float</code> |
 
