--- a/contents/guides/index.mdx
+++ b/contents/guides/index.mdx
@@ -17,20 +17,23 @@ Kraken expands upon SDL3 and other helper frameworks with a rich set of utilitie
 It wraps common patterns into intuitive systems while keeping you close to the metal when you need to be.
 Features include:
 
-- **Unified Input System:** A clean abstraction over keyboard, mouse, and controller input with support for just-pressed and just-released logic, input rebinding, and axis detection.
+- **Built-in Physics Engine:** A thin abstraction over Box2D v3, providing rigidbody dynamics, collision detection, and response with tunable forces.
 - **Animation Controller:** Effortlessly manage sprite sheet animations with flexible frame control and transitions.
 - **Tile Map Support:** Load and render Tiled TMX maps with support for layers, object groups, and tile flipping.
-- **Pixel Array Manipulation:** Get opacity masks and create textures from scratch with rgb(a) multi-dimensional arrays.
+- **Fragment Shader Pass:** Apply custom GLSL/HLSL shaders to your entire scene for effects like lighting, color grading, and post-processing.
+- **Transform Orchestrator:** Create complex, timeline-based animations for any Transform object, perfect for cutscenes, scripted events, or dynamic effects.
 
 ## Planned Features
 
 Kraken is still expanding.
 The features below represent key milestones I plan to implement, all focused on giving developers greater control, speed, and creative range in 2D game development.
 
-| **Feature**          | **Description**                                                                   |
-|----------------------|-----------------------------------------------------------------------------------|
-| Pathfinding          | A\*, grid-based navigation with customizable heuristics and support for obstacles |
-| Raycasting           | 2D ray-line intersection detection for visibility, lighting, and LOS mechanics    |
-| UI System            | Modular interface system with anchors, events, and style theming support          |
-| Physics Engine       | Basic rigidbody dynamics, collision detection, and response with tunable forces   |
-| Networking Utilities | Simplified sockets and messaging layer for real-time multiplayer or RPC systems   |
+| **Feature**          | **Description**                                                                    |
+|----------------------|------------------------------------------------------------------------------------|
+| Pathfinding          | A\*, grid-based navigation with customizable heuristics and support for obstacles  |
+| UI System            | Modular interface system with anchors, events, and style theming support           |
+| Networking Utilities | Simplified sockets and messaging layer for real-time multiplayer or RPC systems    |
+| 2D/3D Spatial Audio  | Positional audio with distance attenuation and stereo panning support              |
+| Video Playback       | Support for playing video files as textures for cutscenes or dynamic backgrounds   |
+| ~~Raycasting~~       | ~~2D ray-line intersection detection for visibility, lighting, and LOS mechanics~~ |
+| ~~Physics Engine~~   | ~~Basic rigidbody dynamics, collision detection, and response with tunable forces~~|
